--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,51 @@
 version: '3.8'
 
 services:
-  app:
-    build: .
+  api:
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "8000:8000"  # FastAPI
-      - "8501:8501"  # Streamlit
+      - "8000:8000"
     volumes:
-      - .:/app
       - ./chroma_db:/app/chroma_db
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - REDIS_URL=redis://redis:6379
-    networks:
-      - ai-network
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-strongpassword}
     depends_on:
       - redis
+    networks:
+      - ai-network
+    restart: unless-stopped
+
+  streamlit:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8501:8501"
+    volumes:
+      - ./chroma_db:/app/chroma_db
+    environment:
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+    depends_on:
+      - api
+    networks:
+      - ai-network
+    restart: unless-stopped
+    command: streamlit run app/streamlit_app.py
 
   redis:
     image: redis:alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD:-strongpassword}
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
       - ai-network
+    restart: unless-stopped
 
 networks:
   ai-network:
